_themes/sphinx_italia_theme/static/css/theme.css
/* ... */
@media screen and (max-width: 768px) {
  .tablet-hide {
    display: none;
  }
}

@media screen and (max-width: 480px) {
  .mobile-hide {
    display: none;
  }
}

.float-left {
  float: left;
}

.float-right {
  float: right;
}

.full-width {
  width: 100%;
}

.wy-table, .rst-content table.docutils, .rst-content table.field-list {
  border-collapse: collapse;
  border-spacing: 0;
  empty-cells: show;
  margin-bottom: 24px;
}
.wy-table caption, .rst-content table.docutils caption, .rst-content table.field-list caption {
  color: #000;
  font: italic 85%/1 arial, sans-serif;
  padding: 1em 0;
  text-align: center;
}
.wy-table td, .rst-content table.docutils td, .rst-content table.field-list td, .wy-table th, .rst-content table.docutils th, .rst-content table.field-list th {
  font-size: 90%;
  margin: 0;
  overflow: visible;
  padding: 8px 16px;
}
.wy-table td:first-child, .rst-content table.docutils td:first-child, .rst-content table.field-list td:first-child, .wy-table th:first-child, .rst-content table.docutils th:first-child, .rst-content table.field-list th:first-child {
  border-left-width: 0;
}
.wy-table thead, .rst-content table.docutils thead, .rst-content table.field-list thead {
  color: #000;
  text-align: left;
  vertical-align: bottom;
  white-space: nowrap;
}
.wy-table thead th, .rst-content table.docutils thead th, .rst-content table.field-list thead th {
  font-weight: 600;
  border-bottom: solid 2px #e1e4e5;
}
.wy-table td, .rst-content table.docutils td, .rst-content table.field-list td {
  background-color: transparent;
  vertical-align: middle;
}

.wy-table td p, .rst-content table.docutils td p, .rst-content table.field-list td p {
  line-height: 18px;
}
.wy-table td p:last-child, .rst-content table.docutils td p:last-child, .rst-content table.field-list td p:last-child {
  margin-bottom: 0;
}

.wy-table .wy-table-cell-min, .rst-content table.docutils .wy-table-cell-min, .rst-content table.field-list .wy-table-cell-min {
  width: 1%;
  padding-right: 0;
}
.wy-table .wy-table-cell-min input[type=checkbox], .rst-content table.docutils .wy-table-cell-min input[type=checkbox], .rst-content table.field-list .wy-table-cell-min input[type=checkbox], .wy-table .wy-table-cell-min input[type=checkbox], .rst-content table.docutils .wy-table-cell-min input[type=checkbox], .rst-content table.field-list .wy-table-cell-min input[type=checkbox] {
  margin: 0;
}

.wy-table-secondary {
  color: gray;
  font-size: 90%;
}

.wy-table-tertiary {
  color: gray;
  font-size: 80%;
}

.wy-table-odd td, .wy-table-striped tr:nth-child(2n-1) td, .rst-content table.docutils:not(.field-list) tr:nth-child(2n-1) td {
  background-color: #F6F9FC;
}

.wy-table-backed {
  background-color: #F6F9FC;
}

/* BORDERED TABLES */
.wy-table-bordered-all, .rst-content table.docutils {
  border: 1px solid #e1e4e5;
}
.wy-table-bordered-all td, .rst-content table.docutils td {
  border-bottom: 1px solid #e1e4e5;
  border-left: 1px solid #e1e4e5;
}
.wy-table-bordered-all tbody > tr:last-child td, .rst-content table.docutils tbody > tr:last-child td {
  border-bottom-width: 0;
}

.wy-table-bordered {
  border: 1px solid #e1e4e5;
}

.wy-table-bordered-rows td {
  border-bottom: 1px solid #e1e4e5;
}
.wy-table-bordered-rows tbody > tr:last-child td {
  border-bottom-width: 0;
}

.wy-table-horizontal tbody > tr:last-child td {
  border-bottom-width: 0;
}
.wy-table-horizontal td, .wy-table-horizontal th {
  border-width: 0 0 1px 0;
  border-bottom: 1px solid #e1e4e5;
}
.wy-table-horizontal tbody > tr:last-child td {
  border-bottom-width: 0;
}

/* RESPONSIVE TABLES */
.wy-table-responsive {
  margin-bottom: 24px;
  max-width: 100%;
  overflow: auto;
}
.wy-table-responsive table {
  margin-bottom: 0 !important;
}
.wy-table-responsive table td, .wy-table-responsive table th {
  white-space: nowrap;
}

a {
  color: #06c;
  text-decoration: none;
  cursor: pointer;
}
a:hover {
  color: #004D99;
}
a:visited {
  color: #06c;
}

html {
  height: 100%;
  overflow-x: hidden;
}

body {
  font-family: "Titillium Web", sans-serif;
  font-weight: normal;
  color: #404040;
  min-height: 100%;
  overflow-x: hidden;
  background: #edf0f2;
}

.wy-text-left {
  text-align: left;
}

.wy-text-center {
  text-align: center;
}

.wy-text-right {
  text-align: right;
}

.wy-text-large {
  font-size: 120%;
}

.wy-text-normal {
  font-size: 100%;
}

.wy-text-small, small {
  font-size: 80%;
}

.wy-text-strike {
  text-decoration: line-through;
}

.wy-text-warning {
  color: #E67E22 !important;
}

a.wy-text-warning:hover {
  color: #eb9950 !important;
}

.wy-text-info {
  color: #2980B9 !important;
}

a.wy-text-info:hover {
  color: #409ad5 !important;
}

.wy-text-success {
  color: #27AE60 !important;
}

a.wy-text-success:hover {
  color: #36d278 !important;
}

.wy-text-danger {
  color: #E74C3C !important;
}

a.wy-text-danger:hover {
  color: #ed7669 !important;
}

.wy-text-neutral {
  color: #404040 !important;
}

a.wy-text-neutral:hover {
  color: #595959 !important;
}

h1, h2, .rst-content .toctree-wrapper p.caption, h3, h4, h5, h6, legend {
  margin-top: 0;
  font-weight: 700;
  font-family: "Titillium Web", sans-serif;
}

p {
  line-height: 24px;
  margin: 0;
  font-size: 16px;
  margin-bottom: 24px;
}

h1 {
  font-size: 175%;
}

h2, .rst-content .toctree-wrapper p.caption {
  font-size: 150%;
}

h3 {
  font-size: 125%;
}

h4 {
  font-size: 115%;
}

h5 {
  font-size: 110%;
}

h6 {
  font-size: 100%;
}

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #e1e4e5;
  margin: 24px 0;
  padding: 0;
}
/* ... */

